--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -1,16 +1,15 @@
-# Node
-FROM node:slim AS builder
+# Build
+FROM node:20-slim AS builder  
 WORKDIR /app
 COPY package*.json ./
-RUN npm ci
+RUN npm ci             
 COPY . .
-RUN npm run build      
-
-# 2) Nginx
-FROM nginx:alpine
+RUN npm run build
+    
+# Runtime
+FROM nginx:1.25-alpine   
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 COPY --from=builder /app/dist /usr/share/nginx/html
 RUN chmod -R 644 /usr/share/nginx/html && find /usr/share/nginx/html -type d -exec chmod 755 {} \;
-
 EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+CMD ["nginx", "-g", "daemon off;"] 
